--- a/css/desk.css
+++ b/css/desk.css
@@ -6,21 +6,51 @@
 }
 
 body {
-  height: 200vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 500vh;
+  overflow-x: hidden;
+  background: #e285f4;
+  background: linear-gradient(45deg, #ffee52 0%, #d88853 100%);
+}
+
+.start {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 20vh;
+  margin-top: 20vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .instruction {
-  opacity: 0.25;
-  width: 100%;
   font-size: 6rem;
   font-weight: 100;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 5vh;
+  border: 1px solid black;
+  border-radius: 100px;
+  padding: 0 5% 0 5%;
+}
+
+.header_picture {
+  margin-left: 45%;
+  position: absolute;
+  opacity: 0;
+  width: 45%;
+  z-index: 1000;
 }
 
 .name_bar {
@@ -32,7 +62,7 @@ body {
   width: 50%;
   height: 20vh;
   margin-left: 10%;
-  margin-top: 30vh;
+  margin-top: 25vh;
 }
 
 .name_bar .logo {
@@ -82,7 +112,7 @@ body {
 
 .name_bar h2:first-child {
   margin-left: 0;
-  background: white;
+  background: rgba(255, 255, 255, 0);
   color: black;
 }
 
@@ -103,17 +133,145 @@ body {
   width: 100%;
 }
 
-.text {
-  opacity: 0;
+.info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr / 1fr;
+      grid-template-columns: 1fr 1fr 1fr / 1fr;
+  width: 40%;
   margin-left: 10%;
   margin-top: 10vh;
-  width: 25%;
 }
 
-.header_picture {
-  margin-left: 45%;
-  position: absolute;
+.info h1 {
   opacity: 0;
-  width: 45%;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 2 / 1;
+  font-weight: 400;
+  font-size: 4rem;
+}
+
+.text {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  grid-area: 2 / 1 / 3 / 1;
+  font-size: 1.25rem;
+  margin-top: 4vh;
+  width: 60%;
+  opacity: 0;
+}
+
+.actual_work {
+  opacity: 0;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  grid-area: 3 / 1 / 4 / 1;
+  height: 3vh;
+  width: 30%;
+  border: 1px solid black;
+  background: none;
+  border-radius: 100px;
+  margin-top: 5vh;
+  padding: 0 2% 0 2%;
+}
+
+.actual_work:active {
+  background: #4825c5;
+  border: 0;
+  color: yellow;
+}
+
+.projekty {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr;
+  -ms-grid-columns: 10% 40% 1fr 10%;
+      grid-template: 1fr / 10% 40% 1fr 10%;
+  background: #26203b;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  margin-top: 20vh;
+  color: white;
+}
+
+.projekty .info {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 1 / 3;
+  margin: 0;
+  width: 100%;
+}
+
+.mosaic {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 3 / 1 / 4;
+  width: 90%;
+  grid-column-gap: 0.5rem;
+  grid-row-gap: 0.5rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[2];
+  -ms-grid-columns: (1fr)[5];
+      grid-template: repeat(2, 1fr)/repeat(5, 1fr);
+}
+
+.mosaic_item {
+  width: 100%;
+  border-radius: 10px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.works_box {
+  margin-top: 5vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 90%;
+  margin-left: 10%;
+  height: 50vh;
+  margin-top: 10vh;
+}
+
+.works_box--element {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.works_box--element h1 {
+  margin: 0;
+  font-size: 15rem;
+  font-weight: 500;
+}
+
+body::-webkit-scrollbar {
+  width: 0.9rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: #d88853;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #fad73c;
+  border-radius: 100px;
+  padding: 10%;
+  border: 0.2rem solid #d88853;
 }
 /*# sourceMappingURL=desk.css.map */
