--- a/css/desk.scss
+++ b/css/desk.scss
@@ -7,19 +7,41 @@
 }
 
 body {
-  height: 200vh;
+  display: flex;
+  flex-direction: column;
+  height: 500vh;
+  overflow-x: hidden;
+  background: rgb(226,133,244);
+  background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(216, 136, 83) 100%);
+}
+
+.start {
+  display: flex;
+  width: 100%;
+  height: 20vh;
+  margin-top: 20vh;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .instruction {
-  opacity: 0.25;
-
-  width: 100%;
   font-size: 6rem;
   font-weight: 100;
   display: flex;
-  justify-content: center;
-  margin-top: 5vh;
 
+  border: 1px solid black;
+  border-radius: 100px;
+  padding: 0 5% 0 5%;
+}
+
+.header_picture {
+  margin-left: 45%;
+  position: absolute;
+  opacity: 0;
+  width: 45%;
+
+  z-index: 1000;
 }
 
 .name_bar {
@@ -28,7 +50,7 @@ body {
   width: 50%;
   height: 20vh;
   margin-left: 10%;
-  margin-top: 30vh;
+  margin-top: 25vh;
 
   .logo {
     opacity: 0;
@@ -67,8 +89,8 @@ body {
 
     &:first-child {
       margin-left: 0;
-      background: white;
-      color: black
+      background: rgba(255, 255, 255, 0);
+      color: black;
     }
   }
 
@@ -83,19 +105,129 @@ body {
   }
 }
 
-.text {
-  opacity: 0;
-
-
+.info {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr / 1fr;
+  width: 40%;
   margin-left: 10%;
   margin-top: 10vh;
-  width: 25%;
+
+  h1 {
+    opacity: 0;
+    grid-area: 1 / 1 / 2 / 1 ;
+    font-weight: 400;
+    font-size: 4rem;
+  }
+}
+
+.text {
+  grid-area: 2 / 1 / 3 / 1 ;
+  font-size: 1.25rem;
+  margin-top: 4vh;
+  width: 60%;
+  opacity: 0;
+}
+
+.actual_work {
+  opacity: 0;
+  grid-area: 3 / 1 / 4 / 1 ;
+  height: 3vh;
+  width: 30%;
+  border: 1px solid black;
+  background: none;
+  border-radius: 100px;
+  margin-top: 5vh;
+  padding: 0 2% 0 2%;
+
+  &:active {
+    background: rgb(72, 37, 197);
+    border: 0;
+    color: yellow;
+  }
+}
+
+.projekty {
+  display: grid;
+  grid-template: 1fr / 10% 40% 1fr 10%;
+  background: rgb(38, 32, 59);
+
+  padding-top: 10%;
+  padding-bottom: 10%;
+  margin-top: 20vh;
+
+  color: white;
+
+
+  .info {
+    grid-area: 1 / 2 / 1 / 3;
+    margin: 0;
+    width: 100%;
+  }
+}
+
+.mosaic {
+  grid-area: 1 / 3 / 1 / 4;
+  width: 90%;
+
+  grid-column-gap: 0.5rem;
+  grid-row-gap: 0.5rem;
+  display: grid;
+  grid-template: repeat(2, 1fr) / repeat(5, 1fr)  ;
+
+}
+.mosaic_item {
+  width: 100%;
+  border-radius: 10px;
+  object-fit: contain;
+}
+
+.works_box {
+  margin-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-left: 10%;
+  height: 50vh;
+  margin-top: 10vh;
+}
+
+.works_box--element {
+  display: flex;
+  flex-direction: column;
+
+  h1 {
+    margin: 0;
+    font-size: 15rem;
+    font-weight: 500;
+  }
 }
 
 
-.header_picture {
-  margin-left: 45%;
-  position: absolute;
-  opacity: 0;
-  width: 45%;
+
+
+
+
+
+
+
+
+
+
+
+
+// SCROLLBAR
+
+body::-webkit-scrollbar {
+  width: 0.9rem;
+}
+ 
+body::-webkit-scrollbar-track {
+  background: rgb(216, 136, 83);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: rgb(250, 215, 60);
+  border-radius: 100px;
+  padding: 10%;
+  border: 0.2rem solid rgb(216, 136, 83);
 }
