--- a/css/mobile.css
+++ b/css/mobile.css
@@ -47,10 +47,10 @@ body {
 }
 
 .header_picture {
-  margin-left: 45%;
   position: absolute;
   opacity: 0;
-  width: 50%;
+  width: 70%;
+  margin-left: 15%;
   z-index: 1000;
 }
 
@@ -132,6 +132,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  justify-self: center;
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
@@ -146,9 +147,9 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr / 1fr;
       grid-template-columns: 1fr 1fr 1fr / 1fr;
-  width: 40%;
+  width: 80%;
   margin-left: 10%;
-  margin-top: 10vh;
+  margin-top: 40vh;
 }
 
 .info h1 {
@@ -167,8 +168,8 @@ body {
   -ms-grid-column: 1;
   grid-area: 2 / 1 / 3 / 1;
   font-size: 1.25rem;
-  margin-top: 4vh;
-  width: 60%;
+  margin-top: 1vh;
+  width: 100%;
   opacity: 0;
 }
 
@@ -179,7 +180,7 @@ body {
   -ms-grid-column: 1;
   grid-area: 3 / 1 / 4 / 1;
   height: 3vh;
-  width: 30%;
+  width: 50%;
   border: 1px solid black;
   background: none;
   border-radius: 100px;
@@ -196,9 +197,9 @@ body {
 .projekty {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr;
-  -ms-grid-columns: 10% 40% 1fr 10%;
-      grid-template: 1fr / 10% 40% 1fr 10%;
+  -ms-grid-rows: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template: 1fr 1fr / 1fr 1fr;
   background: #26203b;
   padding-top: 10%;
   padding-bottom: 10%;
@@ -208,18 +209,20 @@ body {
 
 .projekty .info {
   -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 2 / 1 / 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 2 / 1;
   margin: 0;
-  width: 100%;
+  width: 80%;
+  margin-left: 10%;
 }
 
 .mosaic {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 3 / 1 / 4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
   width: 90%;
   grid-column-gap: 0.5rem;
   grid-row-gap: 0.5rem;
