--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -38,11 +38,10 @@ body {
 }
 
 .header_picture {
-  margin-left: 45%;
   position: absolute;
   opacity: 0;
-  width: 50%;
-
+  width: 70%;
+  margin-left: 15%;
   z-index: 1000;
 }
 
@@ -104,6 +103,7 @@ body {
     margin-top: 4vh;
     display: flex;
     flex-direction: row;
+    justify-self: center;
     grid-area: 2 / 1 / 3 / 3;
 
     height: 1.5rem;
@@ -114,9 +114,9 @@ body {
 .info {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr / 1fr;
-  width: 40%;
+  width: 80%;
   margin-left: 10%;
-  margin-top: 10vh;
+  margin-top: 40vh;
 
   h1 {
     opacity: 0;
@@ -129,8 +129,8 @@ body {
 .text {
   grid-area: 2 / 1 / 3 / 1 ;
   font-size: 1.25rem;
-  margin-top: 4vh;
-  width: 60%;
+  margin-top: 1vh;
+  width: 100%;
   opacity: 0;
 }
 
@@ -138,7 +138,7 @@ body {
   opacity: 0;
   grid-area: 3 / 1 / 4 / 1 ;
   height: 3vh;
-  width: 30%;
+  width: 50%;
   border: 1px solid black;
   background: none;
   border-radius: 100px;
@@ -154,7 +154,7 @@ body {
 
 .projekty {
   display: grid;
-  grid-template: 1fr / 10% 40% 1fr 10%;
+  grid-template: 1fr 1fr / 1fr 1fr;
   background: rgb(38, 32, 59);
 
   padding-top: 10%;
@@ -165,14 +165,15 @@ body {
 
 
   .info {
-    grid-area: 1 / 2 / 1 / 3;
+    grid-area: 1 / 1 / 2 / 1;
     margin: 0;
-    width: 100%;
+    width: 80%;
+    margin-left: 10%;
   }
 }
 
 .mosaic {
-  grid-area: 1 / 3 / 1 / 4;
+  grid-area: 2 / 1 / 3 / 3;
   width: 90%;
 
   grid-column-gap: 0.5rem;
