--- a/css/desk.css
+++ b/css/desk.css
@@ -13,7 +13,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 500vh;
   overflow-x: hidden;
   background: #e285f4;
   background: linear-gradient(45deg, #ffee52 0%, #d88853 100%);
@@ -57,9 +56,9 @@ body {
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr 1fr;
-  -ms-grid-columns: 10% 8% 1fr;
-      grid-template: 1fr 1fr / 10% 8% 1fr;
-  width: 50%;
+  -ms-grid-columns: 4% 4% 40% 40%;
+      grid-template: 1fr 1fr / 4% 4% 40% 40%;
+  width: 100%;
   height: 20vh;
   margin-left: 10%;
   margin-top: 25vh;
@@ -82,8 +81,8 @@ body {
   opacity: 0;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 3 / 1 / 4;
+  -ms-grid-column-span: 2;
+  grid-area: 1 / 3 / 1 / 5;
   font-size: 5rem;
   font-weight: 500;
 }
@@ -160,7 +159,7 @@ body {
   grid-area: 2 / 1 / 3 / 1;
   font-size: 1.25rem;
   margin-top: 4vh;
-  width: 60%;
+  width: 80%;
   opacity: 0;
 }
 
@@ -183,6 +182,11 @@ body {
   background: #4825c5;
   border: 0;
   color: yellow;
+}
+
+.actual_work--white {
+  color: white;
+  border: 1px solid white;
 }
 
 .projekty {
@@ -229,35 +233,49 @@ body {
      object-fit: contain;
 }
 
-.works_box {
-  margin-top: 5vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 90%;
+.big_title {
+  font-size: 15rem;
+  font-weight: 400;
   margin-left: 10%;
-  height: 50vh;
   margin-top: 10vh;
 }
 
-.works_box--element {
+.examples {
+  display: -ms-grid;
+  display: grid;
+  width: 80%;
+  -ms-grid-rows: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template: 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 2vh;
+  margin-left: 10%;
+}
+
+.examples_item {
+  border-radius: 10px;
+  width: 100%;
+}
+
+footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 10vh;
+  width: 100%;
+  height: 10vh;
+  background: #26203b;
+  color: #8564c2;
 }
 
-.works_box--element h1 {
-  margin: 0;
-  font-size: 15rem;
-  font-weight: 500;
+.footer_info {
+  margin-left: 10%;
 }
 
 body::-webkit-scrollbar {
