--- a/css/desk.scss
+++ b/css/desk.scss
@@ -9,7 +9,6 @@
 body {
   display: flex;
   flex-direction: column;
-  height: 500vh;
   overflow-x: hidden;
   background: rgb(226,133,244);
   background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(216, 136, 83) 100%);
@@ -46,8 +45,8 @@ body {
 
 .name_bar {
   display: grid;
-  grid-template: 1fr 1fr / 10% 8% 1fr;
-  width: 50%;
+  grid-template: 1fr 1fr / 4% 4% 40% 40%;
+  width: 100%;
   height: 20vh;
   margin-left: 10%;
   margin-top: 25vh;
@@ -65,7 +64,7 @@ body {
     opacity: 0;
 
 
-    grid-area: 1 / 3 / 1 / 4;
+    grid-area: 1 / 3 / 1 / 5;
     font-size: 5rem;
     font-weight: 500;
   }
@@ -124,7 +123,7 @@ body {
   grid-area: 2 / 1 / 3 / 1 ;
   font-size: 1.25rem;
   margin-top: 4vh;
-  width: 60%;
+  width: 80%;
   opacity: 0;
 }
 
@@ -143,6 +142,11 @@ body {
     background: rgb(72, 37, 197);
     border: 0;
     color: yellow;
+  }
+
+  &--white {
+    color: white;
+    border: 1px solid white;
   }
 }
 
@@ -181,28 +185,41 @@ body {
   object-fit: contain;
 }
 
-.works_box {
-  margin-top: 5vh;
-  display: flex;
-  flex-direction: column;
-  width: 90%;
+.big_title {
+  font-size: 15rem;
+  font-weight: 400;
   margin-left: 10%;
-  height: 50vh;
   margin-top: 10vh;
 }
 
-.works_box--element {
-  display: flex;
-  flex-direction: column;
+.examples {
+  display: grid;
+  width: 80%;
+  grid-template: 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 2vh;
+  margin-left: 10%;
 
-  h1 {
-    margin: 0;
-    font-size: 15rem;
-    font-weight: 500;
-  }
 }
 
+.examples_item {
+  border-radius: 10px;
+  width: 100%;
+}
 
+footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10vh;
+  width: 100%;
+  height: 10vh;
+  background: rgb(38, 32, 59);
+  color: rgb(133, 100, 194);
+}
+
+.footer_info {
+  margin-left: 10%;
+}
 
 
 
