--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -11,7 +11,6 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 500vh;
   overflow-x: hidden;
 
   background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(216, 136, 83) 100%);
@@ -100,14 +99,16 @@ body {
 
 
   .box {
-    margin-top: 4vh;
+    margin-top: 2vh;
     display: flex;
     flex-direction: row;
-    justify-self: center;
     grid-area: 2 / 1 / 3 / 3;
 
-    height: 1.5rem;
+    justify-self: center;
+    align-self: center;
+
     width: 100%;
+    height: 1.2rem;
   }
 }
 
@@ -142,13 +143,18 @@ body {
   border: 1px solid black;
   background: none;
   border-radius: 100px;
-  margin-top: 5vh;
+  margin-top: 2vh;
   padding: 0 2% 0 2%;
 
   &:active {
     background: rgb(72, 37, 197);
     border: 0;
     color: yellow;
+  }
+
+  &--white {
+    color: white;
+    border: 1px solid white;
   }
 }
 
@@ -157,58 +163,77 @@ body {
   grid-template: 1fr 1fr / 1fr 1fr;
   background: rgb(38, 32, 59);
 
-  padding-top: 10%;
-  padding-bottom: 10%;
-  margin-top: 20vh;
+  padding-top: 7vh;
+  padding-bottom: 5vh;
+  margin-top: 5vh;
 
   color: white;
 
 
   .info {
-    grid-area: 1 / 1 / 2 / 1;
+    grid-area: 1 / 1 / 2 / 3;
     margin: 0;
     width: 80%;
     margin-left: 10%;
   }
+
 }
 
 .mosaic {
   grid-area: 2 / 1 / 3 / 3;
-  width: 90%;
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 5vh;
+  align-items: center;
 
   grid-column-gap: 0.5rem;
-  grid-row-gap: 0.5rem;
   display: grid;
   grid-template: repeat(2, 1fr) / repeat(5, 1fr)  ;
 
 }
 .mosaic_item {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
   object-fit: contain;
 }
 
-.works_box {
-  margin-top: 5vh;
-  display: flex;
-  flex-direction: column;
-  width: 90%;
+.big_title {
+  font-size: 6rem;
+  font-weight: 400;
   margin-left: 10%;
-  height: 50vh;
-  margin-top: 10vh;
+  margin-top: 2vh;
 }
 
-.works_box--element {
+.examples {
+  display: grid;
+  width: 80%;
+  grid-template: 1fr 1fr / 1fr 1fr;
+  grid-gap: 1vh;
+  margin-left: 10%;
+
+}
+
+.examples_item {
+  border-radius: 5px;
+  width: 100%;
+}
+
+footer {
   display: flex;
-  flex-direction: column;
-
-  h1 {
-    margin: 0;
-    font-size: 2rem;
-    font-weight: 500;
-  }
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10vh;
+  width: 100%;
+  height: 10vh;
+  background: rgb(38, 32, 59);
+  color: rgb(133, 100, 194);
 }
 
+.footer_info {
+  width: 80%;
+  font-size: 0.75rem;
+  margin-left: 10%;
+}
 
 
 
