--- a/css/desk.scss
+++ b/css/desk.scss
@@ -153,7 +153,9 @@ body {
 .projekty {
   display: grid;
   grid-template: 1fr / 10% 40% 1fr 10%;
-  background: rgb(38, 32, 59);
+  background: rgb(53,0,66);
+  background: linear-gradient(45deg, rgba(53,0,66,1) 0%, rgba(30,6,55,1) 100%);
+
 
   padding-top: 10%;
   padding-bottom: 10%;
