--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,6 +6,10 @@
   font-family: 'Cormorant Garamond', serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -206,7 +210,8 @@ body {
   -ms-grid-rows: 1fr 1fr;
   -ms-grid-columns: 1fr 1fr;
       grid-template: 1fr 1fr / 1fr 1fr;
-  background: #26203b;
+  background: #350042;
+  background: linear-gradient(45deg, #350042 0%, #1e0637 100%);
   padding-top: 7vh;
   padding-bottom: 5vh;
   margin-top: 5vh;
