--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -63,10 +63,10 @@ body {
   -ms-grid-rows: 1fr 1fr;
   -ms-grid-columns: 1fr 1fr;
       grid-template: 1fr 1fr / 1fr 1fr;
-  width: 90%;
+  width: 70%;
   height: 20vh;
   margin-top: 10vh;
-  margin-left: 5%;
+  margin-left: 14%;
 }
 
 .name_bar .logo {
@@ -75,9 +75,9 @@ body {
   grid-area: 1 / 1 / 1 / 1;
   opacity: 0;
   justify-self: flex-start;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  width: 50%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  width: 40%;
   -ms-grid-column-align: center;
       justify-self: center;
   -ms-flex-item-align: center;
@@ -92,15 +92,14 @@ body {
   grid-area: 1 / 2 / 1 / 3;
   opacity: 0;
   line-height: 1;
-  -webkit-font-kerning: 2;
-          font-kerning: 2;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 500;
+  margin-left: -8%;
 }
 
 .name_bar h2 {
   opacity: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
   background: black;
   color: white;
@@ -116,7 +115,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   border: 1px solid black;
-  padding: 0 2% 0 2%;
+  padding: 0 3% 0 3%;
   border-radius: 100px;
 }
 
@@ -127,7 +126,6 @@ body {
 }
 
 .name_bar .box {
-  margin-top: 2vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -143,6 +141,8 @@ body {
   justify-self: center;
   -ms-flex-item-align: center;
       align-self: center;
+  margin-left: 25%;
+  margin-top: -1vh;
   width: 100%;
   height: 1.2rem;
 }
@@ -155,9 +155,12 @@ body {
   width: 80%;
   margin-left: 10%;
   margin-top: 40vh;
+  margin-bottom: 5vh;
 }
 
 .info h1 {
+  font-family: 'poppins';
+  font-weight: 800;
   opacity: 0;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
@@ -173,7 +176,7 @@ body {
   -ms-grid-column: 1;
   grid-area: 2 / 1 / 3 / 1;
   font-size: 1.25rem;
-  margin-top: 1vh;
+  margin-top: 2.5vh;
   width: 100%;
   opacity: 0;
 }
@@ -189,7 +192,7 @@ body {
   border: 1px solid black;
   background: none;
   border-radius: 100px;
-  margin-top: 2vh;
+  margin-top: 5vh;
   padding: 0 2% 0 2%;
 }
 
