--- a/css/desk.css
+++ b/css/desk.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -218,24 +219,26 @@ body {
   -ms-grid-column-span: 1;
   grid-area: 1 / 3 / 1 / 4;
   width: 90%;
-  grid-column-gap: 0.5rem;
-  grid-row-gap: 0.5rem;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (1fr)[2];
-  -ms-grid-columns: (1fr)[5];
-      grid-template: repeat(2, 1fr)/repeat(5, 1fr);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .mosaic_item {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
 .big_title {
-  font-size: 15rem;
+  font-size: 14rem;
   font-weight: 400;
   margin-left: 10%;
   margin-top: 10vh;
@@ -277,6 +280,27 @@ footer {
 
 .footer_info {
   margin-left: 10%;
+}
+
+.kontakt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 10%;
+  margin-top: 10vh;
+}
+
+.kontakt h1 {
+  font-size: 4rem;
+  font-weight: 400;
+}
+
+.kontakt #mail {
+  cursor: pointer;
 }
 
 body::-webkit-scrollbar {
