--- a/css/desk.scss
+++ b/css/desk.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
 * {
   margin: 0;
@@ -174,21 +175,19 @@ body {
 .mosaic {
   grid-area: 1 / 3 / 1 / 4;
   width: 90%;
-
-  grid-column-gap: 0.5rem;
-  grid-row-gap: 0.5rem;
-  display: grid;
-  grid-template: repeat(2, 1fr) / repeat(5, 1fr)  ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 .mosaic_item {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
   object-fit: contain;
 }
 
 .big_title {
-  font-size: 15rem;
+  font-size: 14rem;
   font-weight: 400;
   margin-left: 10%;
   margin-top: 10vh;
@@ -224,7 +223,26 @@ footer {
 }
 
 
+.kontakt {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-top: 10vh;
 
+  h1 {
+    font-size: 4rem;
+    font-weight: 400;
+  }
+  
+  .text_kontakt {
+
+  }
+
+  #mail {
+    cursor: pointer;
+  }
+
+}
 
 
 
