--- a/css/mobile.css
+++ b/css/mobile.css
@@ -160,13 +160,12 @@ body {
 
 .info h1 {
   font-family: 'poppins';
-  font-weight: 800;
   opacity: 0;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   grid-area: 1 / 1 / 2 / 1;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 4rem;
 }
 
@@ -241,9 +240,9 @@ body {
   width: 80%;
   margin-left: 10%;
   margin-top: 5vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   grid-column-gap: 0.5rem;
   display: -ms-grid;
   display: grid;
@@ -255,12 +254,13 @@ body {
 .mosaic_item {
   width: 100%;
   border-radius: 5px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .big_title {
-  font-size: 6rem;
+  font-family: 'poppins';
+  font-size: 4rem;
   font-weight: 400;
   margin-left: 10%;
   margin-top: 2vh;
