--- a/css/mobile.css
+++ b/css/mobile.css
@@ -215,7 +215,7 @@ body {
   background: #350042;
   background: linear-gradient(45deg, #350042 0%, #1e0637 100%);
   padding-top: 7vh;
-  padding-bottom: 5vh;
+  padding-bottom: 0vh;
   margin-top: 5vh;
   color: white;
 }
@@ -238,24 +238,21 @@ body {
   -ms-grid-column-span: 2;
   grid-area: 2 / 1 / 3 / 3;
   width: 80%;
+  height: 100%;
   margin-left: 10%;
-  margin-top: 5vh;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  grid-column-gap: 0.5rem;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: (1fr)[2];
-  -ms-grid-columns: (1fr)[5];
-      grid-template: repeat(2, 1fr)/repeat(5, 1fr);
+  margin-top: 2vh;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .mosaic_item {
+  -o-object-fit: contain;
+     object-fit: contain;
   width: 100%;
-  border-radius: 5px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  height: auto;
+  border-radius: 10px;
 }
 
 .big_title {
@@ -304,6 +301,27 @@ footer {
   width: 80%;
   font-size: 0.75rem;
   margin-left: 10%;
+}
+
+.kontakt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 10%;
+  margin-top: 3vh;
+}
+
+.kontakt h1 {
+  font-size: 4rem;
+  font-weight: 400;
+}
+
+.kontakt #mail {
+  cursor: pointer;
 }
 
 body::-webkit-scrollbar {
