--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -172,7 +172,7 @@ body {
   background: linear-gradient(45deg, rgba(53,0,66,1) 0%, rgba(30,6,55,1) 100%);
 
   padding-top: 7vh;
-  padding-bottom: 5vh;
+  padding-bottom: 0vh;
   margin-top: 5vh;
 
   color: white;
@@ -190,19 +190,19 @@ body {
 .mosaic {
   grid-area: 2 / 1 / 3 / 3;
   width: 80%;
+  height: 100%;
   margin-left: 10%;
-  margin-top: 5vh;
-  align-items: flex-start;
+  margin-top: 2vh;
+  border-radius: 10px;
 
-  grid-column-gap: 0.5rem;
-  display: grid;
-  grid-template: repeat(2, 1fr) / repeat(5, 1fr)  ;
+  display: flex;
 
 }
 .mosaic_item {
+  object-fit: contain;
   width: 100%;
-  border-radius: 5px;
-  object-fit: cover;
+  height: auto;
+  border-radius: 10px;
 }
 
 .big_title {
@@ -243,6 +243,28 @@ footer {
   font-size: 0.75rem;
   margin-left: 10%;
 }
+
+.kontakt {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+  margin-top: 3vh;
+
+  h1 {
+    font-size: 4rem;
+    font-weight: 400;
+  }
+  
+  .text_kontakt {
+
+  }
+
+  #mail {
+    cursor: pointer;
+  }
+
+}
+
 
 
 
