--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +19,7 @@ body {
           flex-direction: column;
   width: 100%;
   overflow-x: hidden;
-  background: linear-gradient(45deg, #ffee52 0%, #d88853 100%);
+  background: linear-gradient(45deg, #ffee52 0%, #e4974f 100%);
 }
 
 .start {
@@ -159,14 +158,13 @@ body {
 }
 
 .info h1 {
-  font-family: 'poppins';
   opacity: 0;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   grid-area: 1 / 1 / 2 / 1;
   font-weight: 500;
-  font-size: 4rem;
+  font-size: 5rem;
 }
 
 .text {
@@ -175,9 +173,14 @@ body {
   -ms-grid-column: 1;
   grid-area: 2 / 1 / 3 / 1;
   font-size: 1.25rem;
-  margin-top: 2.5vh;
+  margin-top: 3vh;
   width: 100%;
   opacity: 0;
+}
+
+a .actual_work {
+  width: 50%;
+  height: 3vh;
 }
 
 .actual_work {
@@ -186,8 +189,6 @@ body {
   -ms-grid-row-span: 1;
   -ms-grid-column: 1;
   grid-area: 3 / 1 / 4 / 1;
-  height: 3vh;
-  width: 50%;
   border: 1px solid black;
   background: none;
   border-radius: 100px;
@@ -198,12 +199,16 @@ body {
 .actual_work:active {
   background: #4825c5;
   border: 0;
-  color: yellow;
+  color: orange;
 }
 
 .actual_work--white {
   color: white;
   border: 1px solid white;
+}
+
+.actual_work--low {
+  margin-top: 2vh;
 }
 
 .projekty {
@@ -256,11 +261,11 @@ body {
 }
 
 .big_title {
-  font-family: 'poppins';
   font-size: 4rem;
   font-weight: 400;
   margin-left: 10%;
-  margin-top: 2vh;
+  margin-top: 10vh;
+  margin-bottom: 3.5vh;
 }
 
 .examples {
@@ -320,8 +325,22 @@ footer {
   font-weight: 400;
 }
 
+.kontakt .kontakt_text {
+  margin-top: 2vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .kontakt #mail {
   cursor: pointer;
+}
+
+.kontakt .mail {
+  margin-left: 5%;
+  border: 1px solid black;
+  padding: 0% 5% 0% 5%;
+  border-radius: 100px;
 }
 
 body::-webkit-scrollbar {
