--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -17,7 +16,7 @@ body {
   width: 100%;
   overflow-x: hidden;
 
-  background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(216, 136, 83) 100%);
+  background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(228, 151, 79) 100%);
 }
 
 .start {
@@ -126,27 +125,29 @@ body {
   margin-bottom: 5vh;
 
   h1 {
-    font-family: 'poppins';
     opacity: 0;
     grid-area: 1 / 1 / 2 / 1 ;
     font-weight: 500;
-    font-size: 4rem;
+    font-size: 5rem;
   }
 }
 
 .text {
   grid-area: 2 / 1 / 3 / 1 ;
   font-size: 1.25rem;
-  margin-top: 2.5vh;
+  margin-top: 3vh;
   width: 100%;
   opacity: 0;
+}
+
+a .actual_work {
+  width: 50%;
+  height: 3vh;
 }
 
 .actual_work {
   opacity: 0;
   grid-area: 3 / 1 / 4 / 1 ;
-  height: 3vh;
-  width: 50%;
   border: 1px solid black;
   background: none;
   border-radius: 100px;
@@ -156,12 +157,16 @@ body {
   &:active {
     background: rgb(72, 37, 197);
     border: 0;
-    color: yellow;
+    color: orange;
   }
 
   &--white {
     color: white;
     border: 1px solid white;
+  }
+  
+  &--low {
+    margin-top: 2vh;
   }
 }
 
@@ -206,11 +211,11 @@ body {
 }
 
 .big_title {
-  font-family: 'poppins';
   font-size: 4rem;
   font-weight: 400;
   margin-left: 10%;
-  margin-top: 2vh;
+  margin-top: 10vh;
+  margin-bottom: 3.5vh;
 }
 
 .examples {
@@ -255,12 +260,20 @@ footer {
     font-weight: 400;
   }
   
-  .text_kontakt {
-
+  .kontakt_text {
+    margin-top: 2vh;
+    display: flex;
   }
 
   #mail {
     cursor: pointer;
+  }
+
+  .mail {
+    margin-left: 5%;
+    border: 1px solid black;
+    padding: 0% 5% 0% 5%;
+    border-radius: 100px;
   }
 
 }
