--- a/css/desk.scss
+++ b/css/desk.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,700&display=swap');
+
 
 * {
   margin: 0;
@@ -7,18 +7,25 @@
   font-family: 'Cormorant Garamond', serif;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
+  width: 100%;
   flex-direction: column;
   overflow-x: hidden;
+  
   background: rgb(226,133,244);
-  background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(216, 136, 83) 100%);
+  background: rgb(232, 233, 222);
 }
 
 .start {
+  overflow-x: hidden;
   display: flex;
   width: 100%;
-  height: 20vh;
+  height: 15vh;
   margin-top: 20vh;
 
   justify-content: center;
@@ -26,47 +33,37 @@ body {
 }
 
 .instruction {
-  font-size: 6rem;
-  font-weight: 100;
+  overflow-x: hidden;
+  font-size: 2.25rem;
+  font-weight: 300;
   display: flex;
 
   border: 1px solid black;
-  border-radius: 100px;
-  padding: 0 5% 0 5%;
+  border-radius: 0px;
+  padding: 1.25% 7% 1.25% 7%;
 }
 
 .header_picture {
-  margin-left: 45%;
+  margin-left: 55%;
   position: absolute;
   opacity: 0;
-  width: 45%;
+  width: 35%;
 
   z-index: 1000;
 }
 
 .name_bar {
   display: grid;
-  grid-template: 1fr 1fr / 4% 4% 40% 40%;
+  grid-template: 1fr / 1fr 1fr;
   width: 100%;
   height: 20vh;
+  margin-top: 30vh;
   margin-left: 10%;
-  margin-top: 25vh;
-
-  .logo {
-    opacity: 0;
-
-    grid-area: 1 / 1 / 1 / 1;
-    width: 100%;
-    justify-self: center;
-    align-self: center;
-  }
-
   h1 {
     opacity: 0;
-
-
-    grid-area: 1 / 3 / 1 / 5;
-    font-size: 5rem;
+    
+    grid-area: 1 / 1 / 1 / 1;
+    font-size: 6rem;
     font-weight: 500;
   }
 
@@ -75,20 +72,21 @@ body {
 
     font-size: 1.25rem;
     font-weight: 400;
-    background: black;
+    background: rgb(0, 0, 0);
     color: white;
-    margin-left: 3%;
+    margin-left: 1%;
     height: 120%;
     display: flex;
     align-items: center;
     justify-content: center;
 
     border: 1px solid black;
-    padding: 0 2% 0 2%;
-    border-radius: 100px;
+    padding: 0 3% 0 3%;
+    border-radius: 0;
 
     &:first-child {
       margin-left: 0;
+      border-radius: 0px;
       background: rgba(255, 255, 255, 0);
       color: black;
     }
@@ -98,8 +96,8 @@ body {
   .box {
     display: flex;
     flex-direction: row;
-    grid-area: 2 / 3 / 3 / 4;
-
+    grid-area: 2 / 1 / 3 / 1;
+    
     height: 1.5rem;
     width: 100%;
   }
@@ -110,20 +108,21 @@ body {
   grid-template-columns: 1fr 1fr 1fr / 1fr;
   width: 40%;
   margin-left: 10%;
-  margin-top: 10vh;
+  margin-top: 25vh;
 
   h1 {
     opacity: 0;
     grid-area: 1 / 1 / 2 / 1 ;
-    font-weight: 400;
-    font-size: 4rem;
+    font-weight: 500;
+    font-size: 3.5rem;
   }
 }
 
 .text {
   grid-area: 2 / 1 / 3 / 1 ;
   font-size: 1.25rem;
-  margin-top: 4vh;
+  font-weight: 300;
+  margin-top: 2vh;
   width: 80%;
   opacity: 0;
 }
@@ -131,24 +130,26 @@ body {
 .actual_work {
   opacity: 0;
   grid-area: 3 / 1 / 4 / 1 ;
-  height: 3vh;
-  width: 30%;
+  height: 4vh;
+  font-size: 0.9rem;
+  width: 40%;
   border: 1px solid black;
   background: none;
-  border-radius: 100px;
-  margin-top: 5vh;
+
+  border-radius: 0px;
+  margin-top: 7.5vh;
   padding: 0 2% 0 2%;
 
   &:active {
-    background: rgb(72, 37, 197);
-    border: 0;
-    color: yellow;
+    background: rgb(255, 110, 110);
+    color: black;
   }
 
-  &--white {
-    color: white;
-    border: 1px solid white;
+  &:hover {
+    background: rgb(241, 241, 241);
+    cursor: pointer;
   }
+
 
   &--low {
     margin-top: 2vh;
@@ -158,57 +159,171 @@ body {
 .projekty {
   display: grid;
   grid-template: 1fr / 10% 40% 1fr 10%;
-  background: rgb(53,0,66);
-  background: linear-gradient(45deg, rgba(53,0,66,1) 0%, rgba(30,6,55,1) 100%);
+  background: rgb(235, 238, 223);
+  height: 50vh;
 
-
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 10%;
   margin-top: 20vh;
 
-  color: white;
+  color: black;
 
 
   .info {
     grid-area: 1 / 2 / 1 / 3;
+    display: flex;
+    flex-direction: column;
     margin: 0;
     width: 100%;
   }
-}
 
-.mosaic {
-  grid-area: 1 / 3 / 1 / 4;
-  width: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  .buttons {
+    grid-area: 1 / 2 / 1 / 3;
+    display: flex;
+    flex-direction: column;
+  }
 
-}
-.mosaic_item {
-  width: 100%;
-  border-radius: 5px;
-  object-fit: contain;
-}
+  .ilustracja_logo {
+    height: 150%;
+    margin-top: -15vh;
+    grid-area: 1 / 3 / 1 / 4;
+    justify-self: flex-start;
+    align-self: flex-start;
+  }
 
-.big_title {
-  font-size: 14rem;
-  font-weight: 400;
+  
+}
+.pre-karty {
+  margin-top: 7.5vh;
   margin-left: 10%;
-  margin-top: 10vh;
+  font-size: 3.5rem;
+  font-weight: 500;
 }
 
-.examples {
+.karty {
   display: grid;
+  grid-template: 1fr/ 1fr 1fr 1fr;
   width: 80%;
-  grid-template: 1fr 1fr / 1fr 1fr 1fr;
-  grid-gap: 2vh;
   margin-left: 10%;
+  margin-top: 3vh;
+  margin-bottom: 10vh;
 
+  h2 {
+    font-weight: 300;
+  }
 }
 
-.examples_item {
-  border-radius: 10px;
+.obrazek {
   width: 100%;
+  border-bottom:1px solid black;
+}
+
+.reakcja {
+  display: grid;
+  grid-template: 1fr / 60% 40%;
+  margin-top: 1.5vh;
+}
+
+.reakcja-item {
+  
+  &:nth-child(1) {
+    align-items: center;
+    margin-left: 10%;
+  }
+  &:nth-child(2) {
+    background: none;
+    margin-right: 10%;
+    font-size: 1rem;
+    border: 1px solid black;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+
+    &:hover {
+      background: white;
+    }
+    p {
+      margin-top: 2%;
+    }
+  }
+}
+
+.element {
+  border: 1px solid black;
+  padding-bottom: 2vh;
+
+  &:first-child {
+    margin-right: 4%;
+  }
+
+  &:nth-child(2) {
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  &:nth-child(3) {
+    margin-left: 4%;
+  }
+}
+
+.naglowki {
+  margin-left: 10%;
+  font-size: 3.5rem;
+  font-weight: 500;
+  margin-bottom: 3.5vh;
+}
+
+.rekomendacje {
+  height: 30vh;
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+}
+
+.rekomendacje-element {
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+
+  &:nth-child(1) {
+    margin-right: 1%;
+  }
+
+  &:nth-child(2) {
+    margin-left: 1%;
+  }
+}
+
+.autor {
+  width: 30%;
+  border-right: 1px solid black;
+  display: flex;
+  flex-direction: column;
+
+  img.zdjecie {
+    object-fit: cover;
+    height: 60%;
+    width: 100%;
+    border-bottom: 1px solid black;
+  }
+
+  p {
+    margin-left: 5%;
+    margin-top: 1.5vh;
+
+    &:last-child {
+      margin-top: 0;
+    }
+  }
+}
+
+.tekst {
+  width: 70%;
+  margin-left: 5%;
+  margin-top: 3%;
+  font-size: 2rem;
 }
 
 footer {
@@ -217,9 +332,10 @@ footer {
   align-items: center;
   margin-top: 10vh;
   width: 100%;
-  height: 10vh;
-  background: rgb(38, 32, 59);
-  color: rgb(133, 100, 194);
+
+  height: 30vh;
+  background: rgb(160, 160, 149);
+  color: rgb(255, 255, 255);
 }
 
 .footer_info {
@@ -231,16 +347,19 @@ footer {
   display: flex;
   flex-direction: column;
   margin-left: 10%;
-  margin-top: 3vh;
+  margin-top: 15vh;
+  margin-bottom: 20vh;
 
   h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-weight: 400;
   }
   
   .kontakt_text {
     margin-top: 2vh;
     display: flex;
+    justify-items: center;
+    align-items: center;
   }
 
   #mail {
@@ -248,10 +367,11 @@ footer {
   }
 
   .mail {
-    margin-left: 2%;
+    margin-top: 1vh;
+    font-size: 2rem;
     border: 1px solid black;
-    padding: 0% 5% 0% 5%;
-    border-radius: 100px;
+    padding: 2% 5% 2% 5%;
+    margin-bottom: 5vh;
   }
 
 }
@@ -266,16 +386,16 @@ footer {
 // SCROLLBAR
 
 body::-webkit-scrollbar {
-  width: 0.9rem;
+  width: 0.5rem;
 }
  
 body::-webkit-scrollbar-track {
-  background: rgb(216, 136, 83);
+  background: rgb(182, 182, 182);
 }
  
 body::-webkit-scrollbar-thumb {
-  background-color: rgb(250, 215, 60);
+  background-color: rgb(54, 54, 54);
   border-radius: 100px;
   padding: 10%;
-  border: 0.2rem solid rgb(216, 136, 83);
+  border: 0.15rem solid rgb(182, 182, 182);
 }
