--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,700&display=swap');
 
 * {
   margin: 0;
@@ -16,14 +16,14 @@ body {
   width: 100%;
   overflow-x: hidden;
 
-  background: linear-gradient(45deg, rgb(255, 238, 82) 0%, rgb(228, 151, 79) 100%);
+  background: rgb(232, 233, 222);
 }
 
 .start {
   display: flex;
   width: 100%;
   height: 20vh;
-  margin-top: 25vh;
+  margin-top: 15vh;
 
   justify-content: center;
   align-items: center;
@@ -35,8 +35,8 @@ body {
   display: flex;
 
   border: 1px solid black;
-  border-radius: 100px;
-  padding: 0 5% 0 5%;
+  border-radius: 0px;
+  padding: 1.5% 7% 1.5% 7%;
 }
 
 .header_picture {
@@ -48,32 +48,19 @@ body {
 }
 
 .name_bar {
-  display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
-  width: 70%;
+  display: flex;
+  flex-direction: column;
   height: 20vh;
   margin-top: 10vh;
-  margin-left: 14%;
-
-  .logo {
-    grid-area: 1 / 1 / 1 / 1;
-    opacity: 0;
-
-    justify-self: flex-start;
-    align-self: flex-end;
-    width: 40%;
-    justify-self: center;
-    align-self: center;
-  }
 
   h1 {
-    grid-area: 1 / 2 / 1 / 3;
     opacity: 0;
 
-    line-height: 1;
-    font-size: 3rem;
-    font-weight: 500;
-    margin-left: -8%;
+    line-height: 0.95;
+
+    margin-left: 14%;
+    font-size: 4rem;
+    font-weight: 400;
   }
 
   h2 {
@@ -83,15 +70,15 @@ body {
     font-weight: 400;
     background: black;
     color: white;
-    margin-left: 3%;
+    margin-left: 4%;
     height: 120%;
     display: flex;
     align-items: center;
     justify-content: center;
 
     border: 1px solid black;
-    padding: 0 3% 0 3%;
-    border-radius: 100px;
+    padding: 0 5% 0 5%;
+    border-radius: 0px;
 
     &:first-child {
       margin-left: 0;
@@ -104,15 +91,12 @@ body {
   .box {
     display: flex;
     flex-direction: row;
-    grid-area: 2 / 1 / 3 / 3;
 
-    justify-self: center;
-    align-self: center;
-    margin-left: 25%;
-    margin-top: -1vh;
+    margin-left: 14%;
+    margin-top: 3vh;
 
     width: 100%;
-    height: 1.2rem;
+    height: 2rem;
   }
 }
 
@@ -121,38 +105,37 @@ body {
   grid-template-columns: 1fr 1fr 1fr / 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-top: 40vh;
+  margin-top: 20vh;
   margin-bottom: 5vh;
 
   h1 {
     opacity: 0;
     grid-area: 1 / 1 / 2 / 1 ;
     font-weight: 500;
-    font-size: 5rem;
+    font-size: 4rem;
   }
 }
 
 .text {
   grid-area: 2 / 1 / 3 / 1 ;
-  font-size: 1.25rem;
-  margin-top: 3vh;
+  font-size: 1.7rem;
+  margin-top: 4vh;
+  line-height: 1.25;
   width: 100%;
   opacity: 0;
-}
-
-a .actual_work {
-  width: 50%;
-  height: 3vh;
 }
 
 .actual_work {
   opacity: 0;
   grid-area: 3 / 1 / 4 / 1 ;
+  align-self: flex-end;
   border: 1px solid black;
   background: none;
-  border-radius: 100px;
-  margin-top: 5vh;
-  padding: 0 2% 0 2%;
+  border-radius: 0;
+  margin-top: 3vh;
+  padding: 2% 5% 2% 5%;
+  font-size: 1.5rem;
+  background-color: white;
 
   &:active {
     background: rgb(72, 37, 197);
@@ -161,8 +144,8 @@ a .actual_work {
   }
 
   &--white {
-    color: white;
-    border: 1px solid white;
+    color: black;
+    border: 1px solid black;
   }
   
   &--low {
@@ -172,65 +155,133 @@ a .actual_work {
 
 .projekty {
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
-  background: rgb(53,0,66);
-  background: linear-gradient(45deg, rgba(53,0,66,1) 0%, rgba(30,6,55,1) 100%);
-
-  padding-top: 7vh;
-  padding-bottom: 0vh;
+  grid-template: 1fr 1fr / 1fr;
+  height: auto;
+  
+  padding-top: 0vh;
+  padding-bottom: 10vh;
   margin-top: 5vh;
 
-  color: white;
+  color: black;
 
 
   .info {
-    grid-area: 1 / 1 / 2 / 3;
+    grid-area: 2 / 1 / 3 / 1;
     margin: 0;
     width: 80%;
     margin-left: 10%;
   }
 
+  h1 {
+    margin-top: 0;
+  }
+
+  .buttons {
+    margin-top: 4vh;
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.mosaic {
-  grid-area: 2 / 1 / 3 / 3;
-  width: 80%;
-  height: 100%;
+.ilustracja_logo {
+  grid-area: 1 / 1 / 1 / 1;
+  width: 90%;
+  justify-self: center;
+}
+
+.pre-karty {
   margin-left: 10%;
-  margin-top: 2vh;
-  border-radius: 10px;
-
-  display: flex;
-
-}
-.mosaic_item {
-  object-fit: contain;
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-}
-
-.big_title {
+  font-weight: 500;
   font-size: 4rem;
-  font-weight: 400;
-  margin-left: 10%;
-  margin-top: 10vh;
-  margin-bottom: 3.5vh;
 }
 
-.examples {
-  display: grid;
+.karty {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
   width: 80%;
-  grid-template: 1fr 1fr / 1fr 1fr;
-  grid-gap: 1vh;
-  margin-left: 10%;
-
+  margin-top: 4vh;
 }
 
-.examples_item {
-  border-radius: 5px;
+.element {
+  border: 1px solid black;
   width: 100%;
+  margin-bottom: 5vh;
+
+  .obrazek {
+    width: 100%;
+    border-bottom: 1px solid black;
+  }
+
+  .reakcja {
+    display: grid;
+    grid-template: 1fr / 60% 40%;
+    margin-left: 5%;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+  }
+  .reakcja-item {
+    font-weight: 400;
+  }
+  a {
+    margin-top: -0.5vh;
+    margin-right: 15%;
+    padding: 1% 12% 2% 12%;
+    justify-self: flex-end;
+    font-size: 1.3rem;
+    background-color: white;
+    border: 1px solid black;
+    text-decoration: none;
+    color: black;
+  }
 }
+
+.rekomendacje {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+}
+
+.rekomendacje-element {
+  border: 1px solid black;
+  margin-top: 5vh;
+  display: grid;
+  grid-template: 1fr / 40% 60%;
+
+
+  .autor {
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid black;
+
+    p {
+      margin-left: 10%;
+      margin-top: 1vh;
+
+      &:nth-child(3) {
+        margin-top: 0;
+      }
+    }
+  }
+
+  .zdjecie {
+    width: 100%;
+    height: 50%;
+    border-bottom: 1px solid black;
+  }
+
+  .tekst {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-left: 7.5%;
+    margin-right: 5%;
+    font-size: 1.5rem;
+  }
+
+}
+
+
 
 footer {
   display: flex;
@@ -253,10 +304,10 @@ footer {
   display: flex;
   flex-direction: column;
   margin-left: 10%;
-  margin-top: 3vh;
+  margin-top: 7vh;
 
   h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 400;
   }
   
@@ -270,10 +321,13 @@ footer {
   }
 
   .mail {
-    margin-left: 5%;
+    font-size: 1.5rem;
+    background-color: white;
     border: 1px solid black;
-    padding: 0% 5% 0% 5%;
-    border-radius: 100px;
+    padding: 3% 5% 3% 5%;
+    border-radius: 0;
+    margin-top: 0vh;
+    margin-bottom: 5vh;
   }
 
 }
@@ -298,12 +352,12 @@ body::-webkit-scrollbar {
 }
  
 body::-webkit-scrollbar-track {
-  background: rgb(216, 136, 83);
+  background: rgb(232, 233, 222);
 }
  
 body::-webkit-scrollbar-thumb {
-  background-color: rgb(250, 215, 60);
+  background-color: rgb(54, 54, 54);
   border-radius: 100px;
   padding: 10%;
-  border: 0.2rem solid rgb(216, 136, 83);
+  border: 0.3rem solid rgb(232, 233, 222);
 }
