--- a/css/desk.css
+++ b/css/desk.css
@@ -23,6 +23,11 @@ body {
   background: #e8e9de;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .start {
   overflow-x: hidden;
   display: -webkit-box;
@@ -59,7 +64,19 @@ body {
   z-index: 1000;
 }
 
+.bg_head {
+  z-index: 999;
+  margin-left: 39%;
+  margin-top: -15vh;
+  width: 60%;
+  position: absolute;
+  opacity: 0;
+}
+
 .name_bar {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr;
@@ -167,10 +184,10 @@ body {
   font-size: 0.9rem;
   width: 40%;
   border: 1px solid black;
-  background: none;
+  background: #eeeeee;
   border-radius: 0px;
   margin-top: 7.5vh;
-  padding: 0 2% 0 2%;
+  padding: 0 3% 0 3%;
 }
 
 .actual_work:active {
@@ -193,12 +210,15 @@ body {
   -ms-grid-rows: 1fr;
   -ms-grid-columns: 10% 40% 1fr 10%;
       grid-template: 1fr / 10% 40% 1fr 10%;
-  background: #ebeedf;
   height: 50vh;
   padding-top: 5%;
   padding-bottom: 10%;
   margin-top: 20vh;
   color: black;
+}
+
+.projekty h1 {
+  line-height: 1.1;
 }
 
 .projekty .info {
@@ -232,7 +252,7 @@ body {
 }
 
 .projekty .ilustracja_logo {
-  height: 150%;
+  width: 100%;
   margin-top: -15vh;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
@@ -259,7 +279,7 @@ body {
       grid-template: 1fr/ 1fr 1fr 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-bottom: 10vh;
+  margin-bottom: 3vh;
 }
 
 .karty h2 {
@@ -290,11 +310,15 @@ body {
 .reakcja-item:nth-child(2) {
   background: none;
   margin-right: 10%;
-  font-size: 1rem;
+  font-size: 1.2rem;
   border: 1px solid black;
   text-align: center;
   text-decoration: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   color: black;
+  padding-bottom: 4%;
 }
 
 .reakcja-item:nth-child(2):hover {
@@ -328,6 +352,10 @@ body {
   font-size: 3.5rem;
   font-weight: 500;
   margin-bottom: 3.5vh;
+}
+
+#projekty {
+  opacity: 0;
 }
 
 .rekomendacje {
@@ -392,14 +420,92 @@ body {
   font-size: 2rem;
 }
 
+.blog {
+  height: 30vh;
+  width: 80%;
+  margin-left: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blog--element {
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blog--element:nth-child(1) {
+  margin-right: 1%;
+}
+
+.blog--element:nth-child(2) {
+  margin-left: 1%;
+}
+
+.blog--element img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  border-right: 1px solid black;
+}
+
+.box--blog {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 3%;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.box--blog h2 {
+  font-size: 1.8rem;
+  line-height: 1.2;
+}
+
+.box--blog p {
+  margin-top: 1.5vh;
+}
+
+.box--blog p:last-child {
+  margin-top: 0;
+}
+
+.box--blog .blog--button {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40%;
+  border: 1px solid black;
+  margin-top: 5vh;
+  padding: 2% 4% 2% 4%;
+}
+
 footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
