--- a/css/desk.scss
+++ b/css/desk.scss
@@ -21,6 +21,11 @@ body {
   background: rgb(232, 233, 222);
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .start {
   overflow-x: hidden;
   display: flex;
@@ -52,7 +57,17 @@ body {
   z-index: 1000;
 }
 
+.bg_head {
+  z-index: 999;
+  margin-left: 39%;
+  margin-top: -15vh;
+  width: 60%;
+  position: absolute;
+  opacity: 0;
+}
+
 .name_bar {
+  grid-area: 1 / 1 / 1 / 1;
   display: grid;
   grid-template: 1fr / 1fr 1fr;
   width: 100%;
@@ -134,11 +149,12 @@ body {
   font-size: 0.9rem;
   width: 40%;
   border: 1px solid black;
-  background: none;
+  background: rgb(238, 238, 238);
+
 
   border-radius: 0px;
   margin-top: 7.5vh;
-  padding: 0 2% 0 2%;
+  padding: 0 3% 0 3%;
 
   &:active {
     background: rgb(255, 110, 110);
@@ -159,15 +175,19 @@ body {
 .projekty {
   display: grid;
   grid-template: 1fr / 10% 40% 1fr 10%;
-  background: rgb(235, 238, 223);
+
   height: 50vh;
 
   padding-top: 5%;
   padding-bottom: 10%;
   margin-top: 20vh;
 
+
   color: black;
 
+  h1 {
+    line-height: 1.1;
+  }
 
   .info {
     grid-area: 1 / 2 / 1 / 3;
@@ -184,7 +204,7 @@ body {
   }
 
   .ilustracja_logo {
-    height: 150%;
+    width: 100%;
     margin-top: -15vh;
     grid-area: 1 / 3 / 1 / 4;
     justify-self: flex-start;
@@ -206,7 +226,7 @@ body {
   grid-template: 1fr/ 1fr 1fr 1fr;
   width: 80%;
   margin-left: 10%;
-  margin-bottom: 10vh;
+  margin-bottom: 3vh;
 
   h2 {
     font-weight: 300;
@@ -233,11 +253,13 @@ body {
   &:nth-child(2) {
     background: none;
     margin-right: 10%;
-    font-size: 1rem;
+    font-size: 1.2rem;
     border: 1px solid black;
     text-align: center;
     text-decoration: none;
+    align-self: center;
     color: black;
+    padding-bottom: 4%;
 
     &:hover {
       background: white;
@@ -273,12 +295,17 @@ body {
   margin-bottom: 3.5vh;
 }
 
+#projekty {
+  opacity: 0;
+}
+
 .rekomendacje {
   height: 30vh;
   width: 80%;
   margin-left: 10%;
   display: flex;
 }
+
 
 .rekomendacje-element {
   border: 1px solid black;
@@ -326,9 +353,79 @@ body {
   font-size: 2rem;
 }
 
+
+// WSTAWKA BLOGOWA
+
+.blog {
+  height: 30vh;
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+}
+
+.blog--element {
+  border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+
+  &:nth-child(1) {
+    margin-right: 1%;
+  }
+
+  &:nth-child(2) {
+    margin-left: 1%;
+  }
+
+  img {
+    object-fit: cover;
+    height: 100%;
+    border-right: 1px solid black;
+  }
+
+}
+
+.box--blog {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3%;
+  margin-left: 3%;
+  margin-right: 3%;
+
+  h2 {
+    font-size: 1.8rem;
+    line-height: 1.2;
+  }
+
+  p {
+    margin-top: 1.5vh;
+
+    &:last-child {
+      margin-top: 0;
+    }
+  }
+
+
+  .blog--button {
+    align-self: flex-end;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    border: 1px solid black;
+    margin-top: 5vh;
+    padding: 2% 4% 2% 4%;
+  }
+
+}
+
+
 footer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   margin-top: 10vh;
   width: 100%;
