--- a/css/mobile.css
+++ b/css/mobile.css
@@ -22,13 +22,30 @@ body {
   background: #e8e9de;
 }
 
+a {
+  -webkit-text-decoration: 0;
+          text-decoration: 0;
+  color: black;
+}
+
+header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 25vh 40vh 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template: 25vh 40vh 1fr / 1fr;
+  margin-top: 5vh;
+  height: auto;
+}
+
 .start {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 20vh;
-  margin-top: 15vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -43,20 +60,34 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  opacity: 1;
   border: 1px solid black;
   border-radius: 0px;
   padding: 1.5% 7% 1.5% 7%;
 }
 
 .header_picture {
-  opacity: 0;
-  margin-top: 15vh;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  grid-area: 3 / 1 / 4 / 1;
+  opacity: 1;
   width: 70%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin-left: 15%;
+  margin-top: 5vh;
   z-index: 1000;
 }
 
 .name_bar {
+  margin-top: 10vh;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  grid-area: 2 / 1 / 3 / 1;
+  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,8 +95,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 20vh;
-  margin-top: 10vh;
 }
 
 .name_bar h1 {
@@ -77,6 +106,9 @@ body {
 }
 
 .name_bar h2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
   opacity: 0;
   font-size: 0.8rem;
   font-weight: 400;
@@ -136,6 +168,7 @@ body {
   grid-area: 1 / 1 / 2 / 1;
   font-weight: 500;
   font-size: 4rem;
+  line-height: 0.95;
 }
 
 .text {
@@ -164,12 +197,6 @@ body {
   padding: 2% 5% 2% 5%;
   font-size: 1.5rem;
   background-color: white;
-}
-
-.actual_work:active {
-  background: #4825c5;
-  border: 0;
-  color: orange;
 }
 
 .actual_work--white {
@@ -221,7 +248,7 @@ body {
 }
 
 .projekty .buttons {
-  margin-top: 4vh;
+  margin-top: 0vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -287,6 +314,75 @@ body {
   border: 1px solid black;
   text-decoration: none;
   color: black;
+}
+
+.blog {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 10%;
+  margin-bottom: 5vh;
+}
+
+.blog--element {
+  width: 100%;
+  border: 1px solid black;
+  margin-top: 5vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr;
+  -ms-grid-columns: 45% 1fr;
+      grid-template: 1fr / 45% 1fr;
+}
+
+.blog--element img {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
+  border-right: 1px solid black;
+}
+
+.blog--element .box--blog {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 1 / 3;
+  margin-left: 5%;
+  margin-top: 5%;
+  margin-right: 5%;
+}
+
+.blog--element .box--blog h2 {
+  font-size: 1.2rem;
+}
+
+.blog--element .box--blog p {
+  margin-top: 0.5vh;
+}
+
+.blog--element .blog--button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding-bottom: 2%;
+  border: 1px solid black;
+  width: 95%;
+  margin-top: 2vh;
+  margin-bottom: 1vh;
 }
 
 .rekomendacje {
