--- a/blog/css/mobile.css
+++ b/blog/css/mobile.css
@@ -31,7 +31,7 @@ a {
 }
 
 .home {
-  width: 10%;
+  width: 40%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,61 +52,46 @@ a {
 
 header {
   border: 1px solid black;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-column: 1;
-  grid-area: 1fr 1fr / 1fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 img {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 1;
-  grid-area: 1 / 1 / 2 / 1;
   width: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
 h1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 2 / 1 / 3;
-  width: 70%;
-  font-size: 3.5rem;
+  width: 100%;
+  font-size: 2rem;
   font-weight: 300;
-  line-height: 1.2;
+  line-height: 1.1;
   margin-top: 2vh;
-  margin-left: 2%;
-}
-
-.diament {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 2 / 2 / 3;
-  justify-self: flex-end;
-  height: 30%;
-  margin-top: 2vh;
-  margin-right: 2%;
+  margin-bottom: 3vh;
+  margin-left: 5%;
 }
 
 h2 {
   margin-top: 10vh;
-  width: 60%;
-  margin-left: 20%;
-  font-size: 2.5rem;
+  width: 90%;
+  margin-left: 5%;
+  font-size: 2rem;
   line-height: 1.4;
 }
 
 .text {
-  margin-top: 5vh;
-  width: 60%;
-  margin-left: 20%;
-  font-size: 1.8rem;
+  margin-top: 3vh;
+  width: 90%;
+  margin-left: 5%;
+  font-size: 1.2rem;
   line-height: 1.4;
 }
-/*# sourceMappingURL=desk.css.map */
+/*# sourceMappingURL=mobile.css.map */
