--- a/css/desk.css
+++ b/css/desk.css
@@ -90,6 +90,7 @@ a {
 
 .name_bar h1 {
   opacity: 0;
+  line-height: 0.9;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: 1 / 1 / 1 / 1;
@@ -204,24 +205,19 @@ a {
   margin-top: 2vh;
 }
 
-.projekty {
+.about {
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr;
-  -ms-grid-columns: 10% 40% 1fr 10%;
-      grid-template: 1fr / 10% 40% 1fr 10%;
-  height: 50vh;
-  padding-top: 5%;
-  padding-bottom: 10%;
-  margin-top: 20vh;
+  -ms-grid-columns: 1fr;
+      grid-template: 1fr / 1fr;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 25vh;
   color: black;
 }
 
-.projekty h1 {
-  line-height: 1.1;
-}
-
-.projekty .info {
+.about .info {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
@@ -237,7 +233,7 @@ a {
   width: 100%;
 }
 
-.projekty .buttons {
+.about .buttons {
   -ms-grid-row: 1;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
@@ -251,7 +247,7 @@ a {
           flex-direction: column;
 }
 
-.projekty .ilustracja_logo {
+.about .ilustracja_logo {
   width: 100%;
   margin-top: -15vh;
   -ms-grid-row: 1;
@@ -263,12 +259,112 @@ a {
       align-self: flex-start;
 }
 
+.about-headline {
+  font-weight: 500;
+  font-size: 3.5rem;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 1 / 1 / 2 / 4;
+}
+
+.about-box {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 2 / 1 / 3 / 4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 5vh;
+  padding-bottom: 10vh;
+}
+
+.about-element {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 15vh 1fr;
+  -ms-grid-columns: 15% 1fr;
+      grid-template: 15vh 1fr / 15% 1fr;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+}
+
+.about-element .icon {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
+  width: 100%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.about-element h2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 1 / 3;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  justify-self: flex-start;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-left: 5%;
+  border: 1px solid black;
+  padding: 2% 5% 2% 5%;
+}
+
+.about-element p {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
+  font-size: 1.95rem;
+  width: 100%;
+  margin-top: 5vh;
+}
+
+.about-element hr {
+  width: 100%;
+  height: 1px;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: black;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-top: 2vh;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+.about-element:first-child {
+  margin-right: 4%;
+}
+
+.about-element:nth-child(2) {
+  margin-left: 4%;
+}
+
 .pre-karty {
-  margin-top: 7.5vh;
   margin-left: 10%;
   font-size: 3.5rem;
   font-weight: 500;
   margin-bottom: 4vh;
+  margin-top: 5vh;
 }
 
 .karty {
@@ -506,18 +602,60 @@ footer {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 10vh;
+  margin-top: 5vh;
   width: 100%;
-  height: 30vh;
-  background: #a0a095;
-  color: white;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+footer a {
+  text-decoration: underline;
+}
+
+footer a:hover {
+  color: #0f0fad;
+}
+
+footer a:hover {
+  cursor: pointer;
 }
 
 .footer_info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr;
+  -ms-grid-columns: 30% 1fr 1fr;
+      grid-template: 1fr / 30% 1fr 1fr;
+  padding: 5% 0 5% 0%;
   margin-left: 10%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer_info .footer_links {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 3 / 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer_info :nth-child(2) {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .kontakt {
