--- a/css/desk.scss
+++ b/css/desk.scss
@@ -11,6 +11,7 @@ html {
   overflow-x: hidden;
 }
 
+
 body {
   display: flex;
   width: 100%;
@@ -76,7 +77,7 @@ a {
   margin-left: 10%;
   h1 {
     opacity: 0;
-    
+    line-height: 0.9;
     grid-area: 1 / 1 / 1 / 1;
     font-size: 6rem;
     font-weight: 500;
@@ -172,22 +173,17 @@ a {
   }
 }
 
-.projekty {
+// O MOICH PROJEKTACH
+
+.about {
   display: grid;
-  grid-template: 1fr / 10% 40% 1fr 10%;
+  grid-template: 1fr / 1fr;
 
-  height: 50vh;
-
-  padding-top: 5%;
-  padding-bottom: 10%;
-  margin-top: 20vh;
-
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 25vh;
 
   color: black;
-
-  h1 {
-    line-height: 1.1;
-  }
 
   .info {
     grid-area: 1 / 2 / 1 / 3;
@@ -210,15 +206,89 @@ a {
     justify-self: flex-start;
     align-self: flex-start;
   }
-
   
 }
+
+.about-headline {
+  font-weight: 500;
+  font-size: 3.5rem;
+  grid-area: 1 / 1 / 2 / 4;
+}
+
+.about-box {
+  grid-area: 2 / 1 / 3 / 4;
+  display: flex;
+  margin-top: 5vh;
+  padding-bottom: 10vh;
+}
+
+
+.about-element {
+  display: grid;
+  grid-template: 15vh 1fr / 15% 1fr;
+  flex-direction: column;
+  width: 50%;
+  .icon {
+    grid-area: 1 / 1 / 1 / 1;
+    width: 100%;
+    align-self: center;
+    justify-self: center;
+
+  }
+
+  h2 {
+    grid-area: 1 / 2 / 1 / 3;
+    align-self: center;
+    justify-self: flex-start;
+    font-size: 2rem;
+    font-weight: 400;
+    margin-left: 5%;
+    border: 1px solid black;
+    padding: 2% 5% 2% 5%;
+
+  }
+
+  p {
+    grid-area: 2 / 1 / 3 / 3 ;
+    font-size: 1.95rem;
+    width: 100%;
+    margin-top: 5vh;
+  }
+
+  hr {
+    width: 100%;
+    height: 1px;
+    width: 100%;
+    outline: none;
+    border: none;
+    background-color: black;
+    align-self: flex-start;
+    margin-top: 2vh;
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
+  &:first-child {
+    margin-right: 4%;
+  }
+
+  &:nth-child(2) {
+    margin-left: 4%;
+  }
+
+
+}
+
+
+
+// END O MOICH PROJEKTACH
+
+
 .pre-karty {
-  margin-top: 7.5vh;
   margin-left: 10%;
   font-size: 3.5rem;
   font-weight: 500;
   margin-bottom: 4vh;
+  margin-top: 5vh;
 }
 
 .karty {
@@ -235,7 +305,7 @@ a {
 
 .obrazek {
   width: 100%;
-  border-bottom:1px solid black;
+  border-bottom: 1px solid black;
 }
 
 .reakcja {
@@ -426,18 +496,46 @@ a {
 footer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-top: 10vh;
+  margin-top: 5vh;
   width: 100%;
 
-  height: 30vh;
-  background: rgb(160, 160, 149);
-  color: rgb(255, 255, 255);
+  justify-content: center;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 300;
+
+  a {
+    text-decoration: underline;
+  }
+
+  a:hover {
+    color: rgb(15, 15, 173);
+  }
+
+  a:hover {
+    cursor: pointer;
+  }
 }
 
 .footer_info {
+  display: grid;
+  grid-template: 1fr / 30% 1fr 1fr;
+  padding: 5% 0 5% 0%;
   margin-left: 10%;
+  align-items: center;
+
+  .footer_links {
+    grid-area: 1 / 1 / 3 / 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  :nth-child(2){
+    justify-content: center;
+  }
 }
+
 
 
 .kontakt {
