--- a/css/mobile.css
+++ b/css/mobile.css
@@ -262,6 +262,7 @@ header {
   margin-left: 10%;
   font-weight: 500;
   font-size: 4rem;
+  margin-bottom: 5vh;
 }
 
 .karty {
@@ -274,8 +275,6 @@ header {
           flex-direction: column;
   margin-left: 10%;
   width: 80%;
-  margin-top: 4vh;
-  margin-bottom: 5vh;
 }
 
 .element {
@@ -316,6 +315,154 @@ header {
   color: black;
 }
 
+.about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 5vh;
+  color: black;
+}
+
+.about .info {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 1 / 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+  width: 100%;
+}
+
+.about .buttons {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 1 / 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.about .ilustracja_logo {
+  width: 100%;
+  margin-top: -15vh;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 3 / 1 / 4;
+  justify-self: flex-start;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.about-headline {
+  font-weight: 500;
+  font-size: 3.5rem;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 1 / 1 / 2 / 4;
+}
+
+.about-box {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 2 / 1 / 3 / 4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.about-element {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 15vh 1fr;
+  -ms-grid-columns: 30% 1fr;
+      grid-template: 15vh 1fr / 30% 1fr;
+  width: 100%;
+  margin-bottom: 10vh;
+}
+
+.about-element .icon {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: 1 / 1 / 1 / 1;
+  width: 80%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.about-element h2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 1 / 3;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  justify-self: flex-start;
+  font-size: 2rem;
+  font-weight: 400;
+  margin-left: 5%;
+  border: 1px solid black;
+  padding: 4% 5% 4% 10%;
+  line-height: 1;
+}
+
+.about-element p {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
+  font-size: 1.65rem;
+  width: 100%;
+  margin-top: 5vh;
+}
+
+.about-element hr {
+  width: 100%;
+  height: 1px;
+  width: 100%;
+  outline: none;
+  border: none;
+  background-color: black;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  margin-top: 2vh;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
+}
+
 .blog {
   width: 80%;
   display: -webkit-box;
@@ -344,8 +491,8 @@ header {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: 1 / 1 / 1 / 1;
-  -o-object-fit: contain;
-     object-fit: contain;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
   border-right: 1px solid black;
@@ -455,16 +602,55 @@ footer {
           align-items: center;
   margin-top: 10vh;
   width: 100%;
-  height: 10vh;
   font-weight: 300;
+  padding: 20% 0 20% 0;
   background: white;
   color: black;
 }
 
 .footer_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 80%;
-  font-size: 0.75rem;
+  font-size: 2rem;
   margin-left: 10%;
+}
+
+.footer_info a {
+  text-decoration: underline;
+  text-align: center;
+}
+
+.footer_info .mail {
+  margin-top: 6vh;
+  text-align: center;
+  width: 90%;
+  font-weight: 500;
+  border: 1px solid #444444;
+  padding: 2% 5% 2% 5%;
+}
+
+.footer_info .local {
+  margin-top: 5vh;
+  font-size: 1.75rem;
+}
+
+.footer_links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .kontakt {
