--- a/projekty/css/desk.css
+++ b/projekty/css/desk.css
@@ -14,13 +14,13 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 80%;
-  margin-left: 10%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
   overflow-x: hidden;
+  margin-left: 10%;
+  width: 80%;
   background: #e285f4;
   background: #e8e9de;
 }
@@ -51,47 +51,36 @@ a {
 }
 
 header {
-  border: 1px solid black;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-column: 1;
-  grid-area: 1fr 1fr / 1fr;
-  overflow-y: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: auto;
+}
+
+header h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 500;
+  margin-left: 0;
+  font-size: 4rem;
+  margin-top: 3vh;
 }
 
 img {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 1;
-  grid-area: 1 / 1 / 2 / 1;
+  height: 100%;
   width: 100%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-h1 {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 2 / 1 / 3;
-  width: 70%;
-  font-size: 3.5rem;
-  font-weight: 300;
-  line-height: 1.2;
-  margin-top: 2vh;
-  margin-left: 2%;
-}
-
-.diament {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 2 / 2 / 3;
-  justify-self: flex-end;
-  height: 30%;
-  margin-top: 2vh;
-  margin-right: 2%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 1px solid black;
+  height: 70vh;
 }
 
 h2 {
