--- a/projekty/css/desk.scss
+++ b/projekty/css/desk.scss
@@ -14,10 +14,10 @@ html {
 body {
   margin-top: 5vh;
   display: flex;
-  width: 80%;
-  margin-left: 10%;
   flex-direction: column;
   overflow-x: hidden;
+  margin-left: 10%;
+  width: 80%;
   
   background: rgb(226,133,244);
   background: rgb(232, 233, 222);
@@ -44,34 +44,27 @@ a {
 }
 
 header{
-    border: 1px solid black;
-    display: grid;
-    grid-area: 1fr 1fr / 1fr;
-    overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+
+  h1 {
+    display: flex;
+    font-weight: 500;
+    margin-left: 0;
+    font-size: 4rem;
+    margin-top: 3vh;
+  }
 }
 
 img {
-    grid-area: 1 / 1 / 2 / 1; 
-    width: 100%;
-    object-fit: contain;
-}
-
-h1 {
-    grid-area: 1 / 2 / 1 / 3;
-    width: 70%;
-    font-size: 3.5rem;
-    font-weight: 300;
-    line-height: 1.2;
-    margin-top: 2vh;
-    margin-left: 2%;
-}
-
-.diament {
-  grid-area: 1 / 2 / 2 / 3;
-  justify-self: flex-end;
-  height: 30%;
-  margin-top: 2vh;
-  margin-right: 2%;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
+  object-fit: cover;
+  border: 1px solid black;
+  height: 70vh;
 }
 
 h2 {
