--- a/projekty/css/mobile.scss
+++ b/projekty/css/mobile.scss
@@ -29,7 +29,7 @@ a {
 }
 
 .home {
-  width: 10%;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -45,47 +45,39 @@ a {
 
 header{
     border: 1px solid black;
-    display: grid;
-    grid-area: 1fr 1fr / 1fr;
+    display: flex;
+    flex-direction: column;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 img {
-    grid-area: 1 / 1 / 2 / 1; 
     width: 100%;
     object-fit: contain;
 }
 
-h1 {
-    grid-area: 1 / 2 / 1 / 3;
-    width: 70%;
-    font-size: 3.5rem;
+h1 {    
+    width: 100%;
+    font-size: 2rem;
     font-weight: 300;
-    line-height: 1.2;
+    line-height: 1.1;
     margin-top: 2vh;
-    margin-left: 2%;
-}
-
-.diament {
-  grid-area: 1 / 2 / 2 / 3;
-  justify-self: flex-end;
-  height: 30%;
-  margin-top: 2vh;
-  margin-right: 2%;
+    margin-bottom: 3vh;
+    margin-left: 5%;
 }
 
 h2 {
   margin-top: 10vh;
-  width: 60%;
-  margin-left: 20%;
-  font-size: 2.5rem;
+  width: 90%;
+  margin-left: 5%;
+  font-size: 2rem;
   line-height: 1.4;
 }
 
 .text {
-  margin-top: 5vh;
-  width: 60%;
-  margin-left: 20%;
-  font-size: 1.8rem;
+  margin-top: 3vh;
+  width: 90%;
+  margin-left: 5%;
+  font-size: 1.2rem;
   line-height: 1.4;
 }
