--- a/css/mobile.css
+++ b/css/mobile.css
@@ -277,6 +277,13 @@ header {
   width: 80%;
 }
 
+.obrazek2 {
+  width: 100%;
+  height: 100%;
+  border-bottom: 0px solid black;
+  padding: 0;
+}
+
 .element {
   border: 1px solid black;
   width: 100%;
@@ -313,6 +320,12 @@ header {
   border: 1px solid black;
   text-decoration: none;
   color: black;
+}
+
+.element--photo {
+  border: 1px solid black;
+  width: 100%;
+  margin-bottom: 5vh;
 }
 
 .about {
