--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -213,6 +213,14 @@ header {
   width: 80%;
 }
 
+.obrazek2 {
+  width: 100%;
+  height: 100%;
+  border-bottom: 0px solid black;
+  padding: 0;
+}
+
+
 .element {
   border: 1px solid black;
   width: 100%;
@@ -243,6 +251,21 @@ header {
     border: 1px solid black;
     text-decoration: none;
     color: black;
+  }
+}
+
+.element--photo {
+  border: 1px solid black;
+  width: 100%;
+  margin-bottom: 5vh;
+
+  &:first-child {
+  }
+
+  &:nth-child(2) {
+  }
+
+  &:nth-child(3) {
   }
 }
 
